@@ -93,7 +93,8 @@
     footprint_teleport_exit="footsteps/teleport-out.png"
 
     terrain_mask_image="terrain/alphamask.png"
-    grid_image="terrain/grid.png"
+    grid_image_top="terrain/grid-top.png"
+    grid_image_bottom="terrain/grid-bottom.png"
     unreachable_image="terrain/darken.png"
 
     observer_image="misc/eye.png"
