@@ -59,7 +59,8 @@ namespace game_config
 	    title_tip_x = 0, title_tip_width = 0, title_tip_padding = 0;
 
 	std::string terrain_mask_image = "terrain/alphamask.png";
-	std::string grid_image = "terrain/grid.png";
+	std::string grid_image_top = "terrain/grid-top.png";
+	std::string grid_image_bottom = "terrain/grid-bottom.png";
 	std::string unreachable_image = "terrain/darken.png";    /**< overlay image for unreachable tiles. */
 	std::string linger_image = "terrain/darken-linger.png";  /**< overlay image for tiles in linger mode. */
 
@@ -193,7 +194,8 @@ namespace game_config
 		foot_teleport_exit = v["footprint_teleport_exit"].str();
 
 		terrain_mask_image = v["terrain_mask_image"].str();
-		grid_image = v["grid_image"].str();
+		grid_image_top = v["grid_image_top"].str();
+		grid_image_bottom = v["grid_image_bottom"].str();
 		unreachable_image = v["unreachable_image"].str();
 
 		observer_image = v["observer_image"].str();
